--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     },
     "husky": {
         "hooks": {
-            "pre-commit": "npm run prettier-format && npm run lint"
+            "pre-commit": "npm run lint"
         }
     },
     "keywords": [],
